Add smart learning system with insights dashboard
- New analyze_learning_insights() extracts patterns from session history
- Tracks conversion rates by loyalty, openness, and disclosure style
- Detects pitch matching effectiveness (matched vs mismatched)
- Generates natural language key learnings
- New /api/insights endpoint returns all analytics
- "View Learning Insights" button opens modal with:
  - Overview stats (sessions, conversion rate, prediction accuracy)
  - Conversion breakdown by loyalty type
  - Pitch matching effectiveness comparison
  - Auto-generated key learnings
  - Raw memory summary (what the agent sees)
- Memory persists across restarts via session_logs.json

--- a/static/index.html
+++ b/static/index.html
@@ -31,9 +31,27 @@
             <span class="stat maybe">Maybe: <strong id="maybe-count">0</strong></span>
         </div>
 
-        <button class="start-button" id="start-button">
-            Start New Conversation
-        </button>
+        <div class="button-row">
+            <button class="start-button" id="start-button">
+                Start New Conversation
+            </button>
+            <button class="insights-button" id="insights-button">
+                View Learning Insights
+            </button>
+        </div>
+
+        <!-- Insights Modal -->
+        <div class="modal-overlay" id="insights-modal">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2>Learning Insights</h2>
+                    <button class="modal-close" id="modal-close">&times;</button>
+                </div>
+                <div class="modal-body" id="insights-content">
+                    Loading...
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="/static/script.js"></script>
